--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@xyflow/react": "^12.9.3",
     "axios": "^1.13.2",
     "jotai": "^2.15.1",
+    "moment": "^2.30.1",
     "nanoid": "^5.1.6",
     "perfect-freehand": "^1.2.2",
     "react": "^19.2.0",
