--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@xyflow/react": "^12.9.3",
     "axios": "^1.13.2",
+    "clsx": "^2.1.1",
     "jotai": "^2.15.1",
     "moment": "^2.30.1",
     "nanoid": "^5.1.6",
@@ -26,7 +27,8 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "react-select": "^5.10.2",
-    "react-tooltip": "^5.30.0"
+    "react-tooltip": "^5.30.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
