--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "d3-drag": "^3.0.0",
     "d3-selection": "^3.0.0",
+    "html-to-image": "^1.11.13",
     "jotai": "^2.15.1",
     "moment": "^2.30.1",
     "nanoid": "^5.1.6",
