--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "perfect-freehand": "^1.2.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
     "react-select": "^5.10.2",
     "react-tooltip": "^5.30.0",
